# devclean

./: .gitignore  README.md  pyproject.toml
src/devclean/: __init__.py  cleaner.py  cli.py  formatter.py  rules.py  scanner.py
tests/: test_cleaner.py  test_cli.py  test_formatter.py  test_rules.py  test_scanner.py
