[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "devclean"
version = "0.1.0"
description = "Find and remove development cruft across projects"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Pranav Lawate"}]
readme = "README.md"
keywords = ["cleanup", "development", "cache", "node_modules", "pycache"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Utilities",
]

[project.scripts]
devclean = "devclean.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

lint.select = [
    "E",
    "F",
    "W",
    "I",
    "N",
    "UP",
]

lint.ignore = [
    "E501",
]

exclude = [
    ".git",
    ".ruff_cache",
    ".venv",
    "venv",
    "__pycache__",
    "build",
    "dist",
]

lint.fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--strict-config",
]

[tool.coverage.run]
source = ["src/devclean"]
omit = ["tests/*"]

[tool.coverage.report]
precision = 2
show_missing = true
fail_under = 80
